<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:spacing="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/romanica"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/news_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onu_statement"
            android:fontFamily="@font/romanica"
            android:gravity="center_horizontal"
            android:textColor="@color/color3_white"
            android:textSize="20sp"
            android:padding="20dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/global_boiling_image"
                android:contentDescription="@string/new_img_content" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/romanica"
            android:justificationMode="inter_word"
            android:padding="20dp"
            android:text="@string/introduction"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color2_white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_subtitle2"
            android:fontFamily="@font/romanica"
            android:gravity="center_horizontal"
            android:textColor="@color/color3_white"
            android:textSize="20sp"
            android:padding="20dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content1"
            android:fontFamily="@font/romanica"
            android:justificationMode="inter_word"
            android:textColor="@color/color2_white"
            android:textSize="16sp"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/subtitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_subtitle3"
            android:fontFamily="@font/romanica"
            android:gravity="center_horizontal"
            android:textColor="@color/color3_white"
            android:textSize="20sp"
            android:padding="20dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content2"
            android:fontFamily="@font/romanica"
            android:justificationMode="inter_word"
            android:textColor="@color/color2_white"
            android:textSize="16sp"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/news_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/news_autor"
            android:textStyle="italic"
            android:fontFamily="@font/romanica"
            android:textAlignment="textEnd"
            android:textColor="@color/color1"
            android:textSize="16sp"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>
</ScrollView>
