<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="8dp">

    <!-- Category 1 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/category1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/solar_system_category"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/solar_system_category"
        android:scaleType="centerCrop"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/category_1_img_content" />

        <ImageView
            android:id="@+id/star_rating_category_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/star_empty"
            android:contentDescription="@string/category_1_master_level"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/romanica"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/category_1"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Category 2 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/category2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/stars_and_constellations_category"
                android:scaleType="centerCrop"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/category_2_img_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/star_rating_category_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/star_empty"
                android:contentDescription="@string/category_2_master_level"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/romanica"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/category_2"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Category 3 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/category3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/galaxies_and_nebulae_category"
                android:scaleType="centerCrop"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/category_3_img_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/star_rating_category_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/star_empty"
                android:contentDescription="@string/category_3_master_level"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/romanica"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/category_3"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Category 4 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/category4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/astronomical_events_category"
                android:scaleType="centerCrop"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/category_4_img_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/star_rating_category_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/star_empty"
                android:contentDescription="@string/category_4_master_level"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/romanica"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/category_4"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Category 5 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/category5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/history_category"
                android:scaleType="centerCrop"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/category_5_img_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/star_rating_category_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/star_empty"
                android:contentDescription="@string/category_5_master_level"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/romanica"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/category_5"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Category 6 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/category6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/exploration_category"
                android:scaleType="centerCrop"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/category_6_img_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/star_rating_category_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/star_empty"
                android:contentDescription="@string/category_6_master_level"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/romanica"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/category_6"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</GridLayout>
